<resources>
    <string name="app_name">ShapesAndColors</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colorGame_imageExample">Example image</string>
    <string name="color_check">Check</string>
    <string name="color_coming">Color coming:D</string>
    <string name="tap_to_name">Tap to name</string>
    <string name="record_shape_name_audio">Record shape name &amp; audio</string>
    <string name="type_shape_name_her">Type Shape name her</string>
    <string name="label">label</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="y_axis">Y-Axis</string>
    <string name="z_axis">Z-Axis</string>
    <string name="x_axis">X-Axis</string>
    <string name="home">Home</string>
    <string name="shapes_colors"><![CDATA[Shapes & Colors]]></string>
    <string name="main_menu_desc">It is a main menu. Hovering it will bring three sub menus. The sub menu includes AR, Game, Sensor page.
    AR menu is on the top, Game menu is on the bottom right, Sensor menu is on the bottom left from the main menu</string>
    <string name="sensor_desc">Would you like to try \'Tilt the phone\'? \nLet\'s see what is changing :D</string>
    <string name="screen_reader_2d_circle">It is a 2D image scroll view on the top of page. Now you are pointing a circle 2D image in a scroll</string>
    <string name="screen_reader_2d_diamond">It is a diamond 2D image in a scroll view</string>
    <string name="screen_reader_2d_heart">It is a heat 2D image in a scroll view</string>
    <string name="screen_reader_2d_hexagon">It is a hexagon 2D image in a scroll view</string>
    <string name="screen_reader_2d_octagon">It is a octagon 2D image in a scroll view</string>
    <string name="screen_reader_2d_oval">It is a oval 2D image in a scroll view</string>
    <string name="screen_reader_2d_rectangle">It is a rectangle 2D image in a scroll view</string>
    <string name="screen_reader_2d_square">It is a square 2D image in a scroll view</string>
    <string name="screen_reader_2d_star">It is a star 2D image in a scroll view</string>
    <string name="screen_reader_2d_triangle">It is a triangle 2D image in a scroll view</string>
</resources>