<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ar.MediaInputActivity">

    <TextView
        android:id="@+id/tv_mediaHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/record_shape_name_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mediaHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="25dp"
        android:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recordBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_fiber_manual_record_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/playBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stopRecord"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:paddingEnd="50dp"
        android:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/icon_stop2"
        app:layout_constraintStart_toEndOf="@+id/recordBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:hint="@string/type_shape_name_her"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_save_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Cancel"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_cancel_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:rippleColor="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>